d_ajax_search.css some fix table overflow scroll

--- a/admin/view/stylesheet/d_ajax_search/d_ajax_search.css
+++ b/admin/view/stylesheet/d_ajax_search/d_ajax_search.css
@@ -69,7 +69,7 @@ h4 {
 .table-responsive{
     overflow: inherit;
 }
-@media screen and (min-width: 1500px) {
+@media screen and (max-width: 1500px) {
     .table-responsive .more-details{
         margin-left: 15px!important;
     }
